# llm-council

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  settings.json  todo.md
.omc/: project-memory.json
.omc/sessions/: 068d956d-06c4-4493-9b58-964a53893879.json  686c6358-1cb5-47d6-adbe-0a1bf7a9fc38.json  efe01ce7-cf4f-4025-b2df-7901769a105c.json
.omc/state/: agent-replay-686c6358-1cb5-47d6-adbe-0a1bf7a9fc38.jsonl  idle-notif-cooldown.json  last-tool-error.json
analysis/: .gitignore  README.md  requirements.txt
analysis/docs/: EVALUATION_SUMMARY.md  SECTION_6.2_RESULTS.md  SECTION_6.6_LIMITATIONS.md
analysis/results/: EXPERIMENTS_SUMMARY_TABLE.csv  PPT_MAIN_RESULTS_TABLE.csv
analysis/results/agent_attribution/: attribution_examples.json  attribution_report.txt  attribution_table.csv
analysis/scripts/: add_accuracy_delta.py  agent_attribution_analysis.py  analysis.py  check_evaluation_quality.py  create_ppt_results_table.py  generate_complete_analysis.py  generate_confusion_matrices.py  improved_evaluator.py  qualitative_analysis.py  reanalyze_simple.py  task_difficulty_analysis_filtered.py  update_all_metrics.py
backend/: config.py  groq_client.py  main.py  openrouter.py
backend/benchmark/: __init__.py  baselines.py  datasets.py  evaluator.py  prompts.py  pubmedBERT_classifier.py  pubmedbert_classifier.py  runner.py
backend/experiments/: tracker.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  api.js  index.css
presentation/: capture-screenshots.js  script.md  slides.md  slides.pptx
(+31 files in other folders)
